--- a/LAB 8.ipynb
+++ b/LAB 8.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "ea3698d1-880a-4c4d-be9a-e89d96d07651",
      "showTitle": false,
@@ -37,7 +34,8 @@
    },
    "outputs": [],
    "source": [
-    "%pip install openpyxl"
+    "%pip install openpyxl\n",
+    "%pip install pyreadstat"
    ]
   },
   {
@@ -85,9 +83,11 @@
     "# Ruta de trabajo del Excel (Databricks Volumes)\n",
     "EXCEL_PATH = \"/Volumes/workspace/default/pncc/20250527162011hk9xzLjtlLyIqA5fF0FY3udjjRUQlTkq.xlsx\"\n",
     "\n",
+    "import os\n",
     "import re\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import pyreadstat\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import StructType, StructField, StringType, DoubleType, NumericType\n",
     "from pyspark.sql import functions as F\n",
@@ -206,10 +206,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0ff737ad-c5a3-4d8e-a16e-c2e01074fb29",
      "showTitle": false,
@@ -239,6 +236,52 @@
    },
    "outputs": [],
    "source": [
+    "directories = [\n",
+    "    \"/Volumes/workspace/default/fallecidos_lesionados/\",\n",
+    "    \"/Volumes/workspace/default/hechos_transito/\",\n",
+    "    \"/Volumes/workspace/default/vehiculos_involucrados/\"\n",
+    "]\n",
+    "\n",
+    "for directory in directories:\n",
+    "    try:\n",
+    "        files = [f.name for f in dbutils.fs.ls(directory)]\n",
+    "        \n",
+    "        for file in files:\n",
+    "            lower_file = file.lower()\n",
+    "            file_path = os.path.join(directory, file)\n",
+    "            \n",
+    "            # XLSX\n",
+    "            if lower_file.endswith(\".xlsx\"):\n",
+    "                csv_path = file_path.replace(\".xlsx\", \".csv\")\n",
+    "                try:\n",
+    "                    df = pd.read_excel(file_path)\n",
+    "                    df.to_csv(csv_path, index=False)\n",
+    "                    print(f\"Convertido XLSX → CSV: {file_path} → {csv_path}\")\n",
+    "                    \n",
+    "                    # Borrar original\n",
+    "                    dbutils.fs.rm(file_path)\n",
+    "                    print(f\"Borrado XLSX: {file_path}\")\n",
+    "                except Exception as e:\n",
+    "                    print(f\"Error con XLSX {file_path}: {e}\")\n",
+    "            \n",
+    "            # SAV\n",
+    "            elif lower_file.endswith(\".sav\"):\n",
+    "                csv_path = file_path.replace(\".sav\", \".csv\")\n",
+    "                try:\n",
+    "                    df, meta = pyreadstat.read_sav(file_path)\n",
+    "                    df.to_csv(csv_path, index=False)\n",
+    "                    print(f\"Convertido SAV → CSV: {file_path} → {csv_path}\")\n",
+    "                    \n",
+    "                    # Borrar original\n",
+    "                    dbutils.fs.rm(file_path)\n",
+    "                    print(f\"Borrado SAV: {file_path}\")\n",
+    "                except Exception as e:\n",
+    "                    print(f\"Error con SAV {file_path}: {e}\")\n",
+    "                    \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al procesar directorio {directory}: {e}\")\n",
+    "\n",
+    "\n",
     "hechos_dfs     = build_dict(EXCEL_PATH, range(1, 17),  \"hechos\")\n",
     "vehiculos_dfs  = build_dict(EXCEL_PATH, range(17, 29), \"vehiculos\")\n",
     "lesionados_dfs = build_dict(EXCEL_PATH, range(31, 47), \"lesionados\")\n",
@@ -254,10 +297,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "9d13c0a1-dd11-442c-84a2-873baae1f646",
      "showTitle": false,
@@ -329,10 +369,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "ed9eb318-da6a-47db-b057-f28b48cc6a59",
      "showTitle": false,
@@ -432,10 +469,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "5c84e375-2c6b-4029-a161-56ff5bdb174a",
      "showTitle": false,
@@ -452,10 +486,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "54a41ebe-e411-4a1f-a68c-61496b1edbca",
      "showTitle": false,
@@ -521,10 +552,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "2e9f4429-aa75-46e1-916e-d5ce6ccb86da",
      "showTitle": false,
@@ -598,10 +626,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "c520ac04-b689-4c5e-a959-7aafa3d4abd6",
      "showTitle": false,
@@ -701,10 +726,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0fa2a743-5189-4fd7-b0b4-162b44d8c37f",
      "showTitle": false,
@@ -774,11 +796,49 @@
     "count_departamentos_unique(lesionados_sdfs, \"lesionados\")\n",
     "count_departamentos_unique(fallecidos_sdfs, \"fallecidos\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cd2171a7-06ad-48f2-9f82-d8cb9bfed222",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "5. ¿Cuál es el total de accidentes por año y departamento?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "01ab6450-a7ee-4094-8863-be30e1b1b996",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "6. ¿Qué día de la semana registra más accidentes en 2024?"
+   ]
   }
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
     "base_environment": "",
