Feat: cleaning rest of data

--- a/LAB 8.ipynb
+++ b/LAB 8.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "ea3698d1-880a-4c4d-be9a-e89d96d07651",
      "showTitle": false,
@@ -66,10 +63,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0ff737ad-c5a3-4d8e-a16e-c2e01074fb29",
      "showTitle": false,
@@ -154,10 +148,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "b15a6b2c-1cc0-4f2d-a320-fd46e3280130",
      "showTitle": false,
@@ -189,6 +180,8 @@
    "source": [
     "from pyspark.sql import functions as F\n",
     "DIR_HECHOS = \"/Volumes/workspace/default/hechos_transito\"\n",
+    "DIR_VEHICULOS = \"/Volumes/workspace/default/vehiculos_involucrados\"\n",
+    "DIR_FALLECIDOS = \"/Volumes/workspace/default/fallecidos_lesionados\"\n",
     "\n",
     "# Opción simple (si todos los CSV ya tienen mismas columnas):\n",
     "hechos_raw = (spark.read\n",
@@ -199,7 +192,27 @@
     ")\n",
     "\n",
     "display(hechos_raw.limit(5))\n",
-    "hechos_raw.printSchema()\n"
+    "hechos_raw.printSchema()\n",
+    "\n",
+    "vehiculos_raw = (spark.read\n",
+    "    .option(\"header\", True)\n",
+    "    .option(\"inferSchema\", True)\n",
+    "    .csv(f\"{DIR_VEHICULOS}/*.csv\")\n",
+    "    .withColumn(\"source_file\", F.col(\"_metadata.file_path\"))\n",
+    ")\n",
+    "\n",
+    "display(vehiculos_raw.limit(5))\n",
+    "vehiculos_raw.printSchema()\n",
+    "\n",
+    "fallecidos_raw = (spark.read\n",
+    "    .option(\"header\", True)\n",
+    "    .option(\"inferSchema\", True)\n",
+    "    .csv(f\"{DIR_FALLECIDOS}/*.csv\")\n",
+    "    .withColumn(\"source_file\", F.col(\"_metadata.file_path\"))\n",
+    ")\n",
+    "\n",
+    "display(fallecidos_raw.limit(5))\n",
+    "fallecidos_raw.printSchema()"
    ]
   },
   {
@@ -224,30 +237,31 @@
     "\n",
     "# 1) alias de columnas → nombre canónico\n",
     "ALIASES = {\n",
-    "    \"num_hecho\":      [\"num_hecho\", \"num\", \"num_correl\", \"num_corre\", \"n_um_corre\", \"num_correlativo\"],\n",
+    "    \"num_hecho\":      [\"num_hecho\", \"num\", \"num_correl\", \"num_corre\", \"n_um_corre\", \"num_correlativo\", \"núm_corre\"],\n",
     "    \"anio\":           [\"anio\", \"ano_ocu\", \"año_ocu\", \"anio_ocu\", \"ano\", \"año\"],\n",
     "    \"mes\":            [\"mes\", \"mes_ocu\"],\n",
     "    \"dia\":            [\"dia\", \"día\", \"dia_ocu\", \"día_ocu\"],\n",
     "    \"dia_sem\":        [\"dia_sem_ocu\", \"día_sem_ocu\", \"dia_sem\", \"día_sem\"],\n",
     "    \"hora\":           [\"hora\", \"hora_ocu\"],\n",
-    "    \"g_hora\":         [\"g_hora\", \"g_hora_5\"],           # nos quedamos con g_hora; g_hora_5 la dejamos opcional\n",
+    "    \"g_hora\":         [\"g_hora\", \"g_hora_5\"],\n",
     "    \"depto\":          [\"depto_ocu\", \"depto\"],\n",
     "    \"mupio\":          [\"mupio_ocu\", \"muni_ocu\", \"municipio\", \"mupio\"],\n",
     "    \"zona\":           [\"zona_ocu\", \"zona\"],\n",
     "    \"area\":           [\"areag_ocu\", \"area_ocu\", \"area\"],\n",
     "    \"tipo_accidente\": [\"tipo_eve\", \"tipo_evento\", \"tipo\", \"tipo_acc\", \"tipo_accidente\"],\n",
     "    \"causa_acc\":      [\"causa_acc\", \"causa\"],\n",
-    "    \"sexo_pil\":       [\"sexo_pil\", \"sexo_piloto\", \"sexo\"],\n",
-    "    \"edad_pil\":       [\"edad_pil\", \"edad\", \"edad_piloto\"],\n",
-    "    \"g_edad\":         [\"g_edad_2\", \"g_edad\"],\n",
+    "    \"sexo_pil\":       [\"sexo_pil\", \"sexo_piloto\", \"sexo\", \"sexo_per\"],\n",
+    "    \"edad_pil\":       [\"edad_pil\", \"edad\", \"edad_piloto\", \"edad_per\"],\n",
+    "    \"g_edad\":         [\"g_edad_2\", \"g_edad\", \"g_edad_80ymás\", \"g_edad_60ymás\", \"edad_quinquenales\"],\n",
     "    \"mayor_menor\":    [\"mayor_menor\"],\n",
     "    \"tipo_veh\":       [\"tipo_veh\", \"tipo_vehiculo\"],\n",
     "    \"marca_veh\":      [\"marca_veh\", \"marca\"],\n",
     "    \"color_veh\":      [\"color_veh\", \"color\"],\n",
     "    \"modelo_veh\":     [\"modelo_veh\", \"modelo\"],\n",
     "    \"g_modelo_veh\":   [\"g_modelo_veh\"],\n",
-    "    \"estado_pil\":     [\"estado_pil\", \"estado_piloto\", \"estado\"],\n",
-    "    \"source_file\":    [\"source_file\", \"_source_file\"]    # por si quedó con o sin guion bajo\n",
+    "    \"estado_pil\":     [\"estado_pil\", \"estado_piloto\", \"estado\", \"estado_con\", \"fall_les\"],\n",
+    "    \"intencionalidad\":[\"int_o_noint\"],\n",
+    "    \"source_file\":    [\"source_file\", \"_source_file\"]\n",
     "}\n",
     "\n",
     "def first_present(colnames, candidates):\n",
@@ -271,7 +285,9 @@
     "\n",
     "    return df\n",
     "\n",
-    "hechos_std = canonize(hechos_raw)\n"
+    "hechos_std = canonize(hechos_raw)\n",
+    "fallecidos_std = canonize(fallecidos_raw)\n",
+    "vehiculos_std = canonize(vehiculos_raw)\n"
    ]
   },
   {
@@ -292,14 +308,21 @@
    },
    "outputs": [],
    "source": [
-    "# Función canonizar \n",
-    "hechos_std = canonize(hechos_raw)\n",
-    "\n",
     "# Si no hay 'anio', lo extraemos del nombre del archivo\n",
     "if \"anio\" not in hechos_std.columns and \"source_file\" in hechos_std.columns:\n",
     "    hechos_std = hechos_std.withColumn(\n",
     "        \"anio\", F.regexp_extract(\"source_file\", r\"(20\\d{2})\", 1).cast(\"int\")\n",
-    "    )\n"
+    "    )\n",
+    "\n",
+    "if \"anio\" not in fallecidos_std.columns and \"source_file\" in fallecidos_std.columns:\n",
+    "    fallecidos_std = fallecidos_std.withColumn(\n",
+    "        \"anio\", F.regexp_extract(\"source_file\", r\"(20\\d{2})\", 1).cast(\"int\")\n",
+    "    )\n",
+    "\n",
+    "if \"anio\" not in vehiculos_std.columns and \"source_file\" in vehiculos_std.columns:\n",
+    "    vehiculos_std = vehiculos_std.withColumn(\n",
+    "        \"anio\", F.regexp_extract(\"source_file\", r\"(20\\d{2})\", 1).cast(\"int\")\n",
+    "    )"
    ]
   },
   {
@@ -329,21 +352,23 @@
     "# (1) Normaliza a string para inspección y limpia tokens comunes no-numéricos\n",
     "TOKENS_NULOS = [\"Ignorada\",\"IGNORADA\",\"NA\",\"N/A\",\"S/D\",\"SD\",\"Sin dato\",\"SIN DATO\",\"\", \" \"]\n",
     "\n",
-    "df = hechos_std\n",
-    "for c in INT_COLS:\n",
-    "    if c in df.columns:\n",
-    "        # todo como string primero\n",
-    "        s = F.col(c).cast(\"string\")\n",
-    "        # convierte a NULL si coincide con tokens nulos\n",
-    "        s = F.when(F.lower(F.trim(s)).isin([t.lower() for t in TOKENS_NULOS]), None).otherwise(s)\n",
-    "        # deja pasar solo enteros (± dígitos); si no, NULL\n",
-    "        s = F.when(F.trim(s).rlike(r\"^-?\\d+$\"), s).otherwise(None)\n",
-    "        # castea a int al final\n",
-    "        df = df.withColumn(c, s.cast(T.IntegerType()))\n",
+    "dfs = [hechos_std, fallecidos_std, vehiculos_std]\n",
     "\n",
-    "# (2) regla específica: 9999 en modelo_veh -> NULL\n",
-    "if \"modelo_veh\" in df.columns:\n",
-    "    df = df.withColumn(\"modelo_veh\", F.when(F.col(\"modelo_veh\")==9999, None).otherwise(F.col(\"modelo_veh\")))\n"
+    "for df in dfs:\n",
+    "    for c in INT_COLS:\n",
+    "        if c in df.columns:\n",
+    "            # todo como string primero\n",
+    "            s = F.col(c).cast(\"string\")\n",
+    "            # convierte a NULL si coincide con tokens nulos\n",
+    "            s = F.when(F.lower(F.trim(s)).isin([t.lower() for t in TOKENS_NULOS]), None).otherwise(s)\n",
+    "            # deja pasar solo enteros (± dígitos); si no, NULL\n",
+    "            s = F.when(F.trim(s).rlike(r\"^-?\\d+$\"), s).otherwise(None)\n",
+    "            # castea a int al final\n",
+    "            df = df.withColumn(c, s.cast(T.IntegerType()))\n",
+    "\n",
+    "    # (2) regla específica: 9999 en modelo_veh -> NULL\n",
+    "    if \"modelo_veh\" in df.columns:\n",
+    "        df = df.withColumn(\"modelo_veh\", F.when(F.col(\"modelo_veh\")==9999, None).otherwise(F.col(\"modelo_veh\")))\n"
    ]
   },
   {
@@ -365,23 +390,28 @@
    "outputs": [],
    "source": [
     "OUT_SILVER_HECHOS = \"/Volumes/workspace/default/hechos_transito/silver\"\n",
+    "OUT_SILVER_VEHICULOS = \"/Volumes/workspace/default/vehiculos_involucrados/silver\"\n",
+    "OUT_SILVER_FALLECIDOS = \"/Volumes/workspace/default/fallecidos_lesionados/silver\"\n",
     "\n",
-    "(df\n",
-    " .coalesce(1)\n",
-    " .write.mode(\"overwrite\")\n",
-    " .parquet(OUT_SILVER_HECHOS))\n",
+    "dfs = [hechos_std, fallecidos_std, vehiculos_std]\n",
+    "OUT_SILVERS = [OUT_SILVER_HECHOS, OUT_SILVER_VEHICULOS, OUT_SILVER_FALLECIDOS]\n",
     "\n",
-    "print(\"Hechos de tránsito estandarizados →\", OUT_SILVER_HECHOS)\n"
+    "for i in range(3):\n",
+    "    df = dfs[i]\n",
+    "    out_silver = OUT_SILVERS[i]\n",
+    "    (df\n",
+    "    .coalesce(1)\n",
+    "    .write.mode(\"overwrite\")\n",
+    "    .parquet(OUT_SILVER_HECHOS))\n",
+    "\n",
+    "    print(f\"{df} estandarizados →\", out_silver)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "116815e8-ea38-4277-bae4-02473c7d9494",
      "showTitle": false,
@@ -397,10 +427,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "5c84e375-2c6b-4029-a161-56ff5bdb174a",
      "showTitle": false,
@@ -417,10 +444,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "54a41ebe-e411-4a1f-a68c-61496b1edbca",
      "showTitle": false,
@@ -486,10 +510,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "2e9f4429-aa75-46e1-916e-d5ce6ccb86da",
      "showTitle": false,
@@ -563,10 +584,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "c520ac04-b689-4c5e-a959-7aafa3d4abd6",
      "showTitle": false,
@@ -757,10 +775,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0fa2a743-5189-4fd7-b0b4-162b44d8c37f",
      "showTitle": false,
@@ -835,10 +850,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "cd2171a7-06ad-48f2-9f82-d8cb9bfed222",
      "showTitle": false,
@@ -854,10 +866,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "01ab6450-a7ee-4094-8863-be30e1b1b996",
      "showTitle": false,
