--- a/LAB 8.ipynb
+++ b/LAB 8.ipynb
@@ -402,7 +402,7 @@
     "    (df\n",
     "    .coalesce(1)\n",
     "    .write.mode(\"overwrite\")\n",
-    "    .parquet(OUT_SILVER_HECHOS))\n",
+    "    .parquet(out_silver))\n",
     "\n",
     "    print(f\"{df} estandarizados →\", out_silver)\n"
    ]
@@ -474,8 +474,14 @@
    },
    "outputs": [],
    "source": [
+    "from pyspark.sql.types import NumericType\n",
+    "\n",
+    "hechos_silver = spark.read.parquet(OUT_SILVER_HECHOS)\n",
+    "vehiculos_silver = spark.read.parquet(OUT_SILVER_VEHICULOS)\n",
+    "fallecidos_silver = spark.read.parquet(OUT_SILVER_FALLECIDOS)\n",
+    "\n",
     "def ae_conteos_describe_summary(nombre: str, sdfs: dict, n_show: int = 5):\n",
-    "    print(f\"\\n===== {nombre.upper()} :: Conteos por hoja =====\")\n",
+    "    print(f\"\\n===== {nombre.upper()} =====\")\n",
     "    total_registros = 0\n",
     "    for key, sdf in sdfs.items():\n",
     "        c = sdf.count()\n",
@@ -487,23 +493,22 @@
     "    if sdfs:\n",
     "        first_key = list(sdfs.keys())[0]\n",
     "        print(f\"\\n--- Ejemplo .show() :: {first_key} ---\")\n",
-    "        sdfs[first_key].show(n_show, truncate=False)\n",
+    "        sdfs[first_key].show(n_show, truncate=False, vertical=True)\n",
     "\n",
     "        # describe/summary de columnas numéricas\n",
     "        num_cols = [f.name for f in sdfs[first_key].schema.fields if isinstance(f.dataType, NumericType)]\n",
     "        if num_cols:\n",
     "            print(f\"\\n--- describe(numéricas) :: {first_key} ---\")\n",
-    "            sdfs[first_key].select(*num_cols).describe().show(truncate=False)\n",
+    "            sdfs[first_key].select(*num_cols).describe().show(truncate=False, vertical=True)\n",
     "\n",
     "            print(f\"\\n--- summary(numéricas) :: {first_key} ---\")\n",
-    "            sdfs[first_key].select(*num_cols).summary(\"count\",\"mean\",\"stddev\",\"min\",\"25%\",\"50%\",\"75%\",\"max\").show(truncate=False)\n",
+    "            sdfs[first_key].select(*num_cols).summary(\"count\",\"mean\",\"stddev\",\"min\",\"25%\",\"50%\",\"75%\",\"max\").show(truncate=False, vertical=True)\n",
     "        else:\n",
     "            print(f\"\\n--- {first_key}: no hay columnas numéricas detectadas ---\")\n",
     "\n",
-    "ae_conteos_describe_summary(\"hechos\", hechos_sdfs)\n",
-    "ae_conteos_describe_summary(\"vehiculos\", vehiculos_sdfs)\n",
-    "ae_conteos_describe_summary(\"lesionados\", lesionados_sdfs)\n",
-    "ae_conteos_describe_summary(\"fallecidos\", fallecidos_sdfs)"
+    "ae_conteos_describe_summary(\"hechos\", {\"hechos\": hechos_silver})\n",
+    "ae_conteos_describe_summary(\"vehiculos\", {\"vehiculos\": vehiculos_silver})\n",
+    "ae_conteos_describe_summary(\"fallecidos\", {\"fallecidos\": fallecidos_silver})"
    ]
   },
   {
