--- a/LAB 8.ipynb
+++ b/LAB 8.ipynb
@@ -545,7 +545,9 @@
    },
    "outputs": [],
    "source": [
-    "EXPECTED_YEARS = set(range(2020, 2025))  # 2020..2024\n",
+    "import re\n",
+    "\n",
+    "EXPECTED_YEARS = set(range(2013, 2024))  # 2013..2023\n",
     "YEAR_RX = re.compile(r'(?<!\\d)(20\\d{2})(?:\\.0)?(?!\\d)')\n",
     "\n",
     "def extract_year_from_col(colname: str) -> int | None:\n",
@@ -556,32 +558,31 @@
     "    except:\n",
     "        return None\n",
     "\n",
-    "def detect_years_in_pdf(df: pd.DataFrame) -> set[int]:\n",
+    "def detect_years_in_sdf(df) -> set[int]:\n",
+    "    \"\"\"Detecta años en nombres de columnas de un Spark DataFrame.\"\"\"\n",
     "    years = set()\n",
     "    for c in df.columns:\n",
     "        y = extract_year_from_col(c)\n",
-    "        if y: years.add(y)\n",
+    "        if y:\n",
+    "            years.add(y)\n",
     "    return years\n",
     "\n",
-    "def report_years_dict(dict_pd: dict, titulo: str):\n",
+    "def report_years_df(df, titulo: str):\n",
     "    print(f\"\\n===== Verificación de años: {titulo} =====\")\n",
-    "    all_years = set()\n",
-    "    for key, df in dict_pd.items():\n",
-    "        found = detect_years_in_pdf(df)\n",
-    "        all_years |= found\n",
-    "        missing = sorted(EXPECTED_YEARS - found)\n",
-    "        outside = sorted(y for y in found if y not in EXPECTED_YEARS)\n",
-    "        print(f\"[{key}] encontrados: {sorted(found) if found else '—'} | faltantes vs 2020–2024: {missing if missing else 'ninguno'} | fuera de rango: {outside if outside else 'ninguno'}\")\n",
-    "    print(f\"\\nAños agregados (union) en {titulo}: {sorted(all_years) if all_years else '—'}\")\n",
-    "    return all_years\n",
+    "    found = detect_years_in_sdf(df)\n",
+    "    missing = sorted(EXPECTED_YEARS - found)\n",
+    "    outside = sorted(y for y in found if y not in EXPECTED_YEARS)\n",
+    "    print(f\"Encontrados: {sorted(found) if found else '—'} | \"\n",
+    "          f\"faltantes vs 2013–2023: {missing if missing else 'ninguno'} | \"\n",
+    "          f\"fuera de rango: {outside if outside else 'ninguno'}\")\n",
+    "    return found\n",
     "\n",
-    "years_hechos     = report_years_dict(hechos_dfs, \"hechos\")\n",
-    "years_vehiculos  = report_years_dict(vehiculos_dfs, \"vehiculos\")\n",
-    "years_lesionados = report_years_dict(lesionados_dfs, \"lesionados\")\n",
-    "years_fallecidos = report_years_dict(fallecidos_dfs, \"fallecidos\")\n",
+    "years_hechos     = report_years_df(hechos_silver, \"hechos\")\n",
+    "years_vehiculos  = report_years_df(vehiculos_silver, \"vehiculos\")\n",
+    "years_fallecidos = report_years_df(fallecidos_silver, \"fallecidos\")\n",
     "\n",
     "print(\"\\n¿Coinciden los conjuntos de años (intersección)?\")\n",
-    "intersection_all = years_hechos & years_vehiculos & years_lesionados & years_fallecidos\n",
+    "intersection_all = years_hechos & years_vehiculos & years_fallecidos\n",
     "print(\"Intersección común:\", sorted(intersection_all) if intersection_all else \"—\")"
    ]
   },
@@ -620,7 +621,7 @@
    "outputs": [],
    "source": [
     "# === Accidente (largo + ancho) → tidy, robusto ===\n",
-    "import re, unicodedata\n",
+    "import unicodedata\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pyspark.sql import functions as F\n",
@@ -756,10 +757,9 @@
     "    return sdf\n",
     "\n",
     "# === USO ===\n",
-    "acc_hechos_sdf     = accidentes_tidy_from_dict(hechos_dfs, \"hechos\")\n",
-    "acc_vehiculos_sdf  = accidentes_tidy_from_dict(vehiculos_dfs, \"vehiculos\")\n",
-    "acc_lesionados_sdf = accidentes_tidy_from_dict(lesionados_dfs, \"lesionados\")\n",
-    "acc_fallecidos_sdf = accidentes_tidy_from_dict(fallecidos_dfs, \"fallecidos\")\n",
+    "acc_hechos_sdf     = accidentes_tidy_from_dict(hechos_silver, \"hechos\")\n",
+    "acc_vehiculos_sdf  = accidentes_tidy_from_dict(vehiculos_silver, \"vehiculos\")\n",
+    "acc_fallecidos_sdf = accidentes_tidy_from_dict(fallecidos_silver, \"fallecidos\")\n",
     "\n",
     "# Ejemplos de consulta:\n",
     "print(\"\\nTop 10 (hechos) por count:\")\n",
