--- a/LAB 8.ipynb
+++ b/LAB 8.ipynb
@@ -912,7 +912,7 @@
        "bindings": {},
        "collapsed": false,
        "command": "%python\n__backend_agg_display_orig = display\n__backend_agg_dfs = []\ndef __backend_agg_display_new(df):\n    __backend_agg_df_modules = [\"pandas.core.frame\", \"databricks.koalas.frame\", \"pyspark.sql.dataframe\", \"pyspark.pandas.frame\", \"pyspark.sql.connect.dataframe\"]\n    if (type(df).__module__ in __backend_agg_df_modules and type(df).__name__ == 'DataFrame') or isinstance(df, list):\n        __backend_agg_dfs.append(df)\n\ndisplay = __backend_agg_display_new\n\ndef __backend_agg_user_code_fn():\n    import base64\n    exec(base64.standard_b64decode(\"YWNjX3Bvcl9hbmlvX2RlcCA9IChoZWNob3Nfc2lsdmVyCiAgICAgICAgICAgICAgICAgICAgLmdyb3VwQnkoImFuaW8iLCAiZGVwdG8iKQogICAgICAgICAgICAgICAgICAgIC5hZ2coRi5zdW0oImFuaW8iKS5hbGlhcygidG90YWxfYWNjaWRlbnRlcyIpKQogICAgICAgICAgICAgICAgICAgIC5vcmRlckJ5KCJhbmlvIiwgImRlcHRvIikpCgpkaXNwbGF5KGFjY19wb3JfYW5pb19kZXAp\").decode())\n\ntry:\n    # run user code\n    __backend_agg_user_code_fn()\n\n    #reset display function\n    display = __backend_agg_display_orig\n\n    if len(__backend_agg_dfs) > 0:\n        # create a temp view\n        if type(__backend_agg_dfs[0]).__module__ == \"databricks.koalas.frame\":\n            # koalas dataframe\n            __backend_agg_dfs[0].to_spark().createOrReplaceTempView(\"DatabricksView2ff01d4\")\n        elif type(__backend_agg_dfs[0]).__module__ == \"pandas.core.frame\" or isinstance(__backend_agg_dfs[0], list):\n            # pandas dataframe\n            spark.createDataFrame(__backend_agg_dfs[0]).createOrReplaceTempView(\"DatabricksView2ff01d4\")\n        else:\n            __backend_agg_dfs[0].createOrReplaceTempView(\"DatabricksView2ff01d4\")\n        #run backend agg\n        display(spark.sql(\"\"\"WITH q AS (select * from DatabricksView2ff01d4) SELECT `depto`,SUM(`total_accidentes`) `column_ffd8cc2185` FROM q GROUP BY `depto`\"\"\"))\n    else:\n        displayHTML(\"dataframe no longer exists. If you're using dataframe.display(), use display(dataframe) instead.\")\n\n\nfinally:\n    spark.sql(\"drop view if exists DatabricksView2ff01d4\")\n    display = __backend_agg_display_orig\n    del __backend_agg_display_new\n    del __backend_agg_display_orig\n    del __backend_agg_dfs\n    del __backend_agg_user_code_fn\n\n",
-       "commandTitle": "Visualization 1",
+       "commandTitle": "Chart",
        "commandType": "auto",
        "commandVersion": 0,
        "commentThread": [],
@@ -930,9 +930,13 @@
            "alignYAxesAtZero": true,
            "coefficient": 1,
            "columnConfigurationMap": {
+            "series": {
+             "column": "anio",
+             "id": "column_b381ce0689"
+            },
             "x": {
              "column": "depto",
-             "id": "column_ffd8cc2183"
+             "id": "column_b381ce0685"
             },
             "y": [
              {
@@ -966,8 +970,246 @@
             "stacking": null
            },
            "seriesOptions": {
+            "column_b381ce0687": {
+             "type": "column",
+             "yAxis": 0
+            },
             "column_ffd8cc2185": {
              "type": "column",
+             "yAxis": 0,
+             "zIndex": 0
+            }
+           },
+           "showDataLabels": false,
+           "sizemode": "diameter",
+           "sortX": true,
+           "sortY": true,
+           "swappedAxes": true,
+           "textFormat": "",
+           "useAggregationsUi": true,
+           "valuesOptions": {},
+           "version": 2,
+           "xAxis": {
+            "labels": {
+             "enabled": true
+            },
+            "type": "-"
+           },
+           "yAxis": [
+            {
+             "title": {
+              "text": "Total de accidentes"
+             },
+             "type": "-"
+            },
+            {
+             "opposite": true,
+             "title": {
+              "text": null
+             },
+             "type": "-"
+            }
+           ]
+          }
+         }
+        ]
+       },
+       "datasetPreviewNameToCmdIdMap": {},
+       "diffDeletes": [],
+       "diffInserts": [],
+       "displayType": "redashChart",
+       "error": null,
+       "errorDetails": null,
+       "errorSummary": null,
+       "errorTraceType": null,
+       "finishTime": 0,
+       "globalVars": {},
+       "guid": "",
+       "height": "auto",
+       "hideCommandCode": false,
+       "hideCommandResult": false,
+       "iPythonMetadata": null,
+       "inputWidgets": {},
+       "isLockedInExamMode": false,
+       "latestAssumeRoleInfo": null,
+       "latestUser": "a user",
+       "latestUserId": null,
+       "listResultMetadata": null,
+       "metadata": {},
+       "nuid": "59f45bf6-84f8-4074-9d33-0e3352389a51",
+       "origId": 0,
+       "parentHierarchy": [],
+       "pivotAggregation": null,
+       "pivotColumns": null,
+       "position": 23.5,
+       "resultDbfsErrorMessage": null,
+       "resultDbfsStatus": "INLINED_IN_TREE",
+       "results": null,
+       "showCommandTitle": false,
+       "startTime": 0,
+       "state": "input",
+       "streamStates": {},
+       "subcommandOptions": {
+        "queryPlan": {
+         "groups": [
+          {
+           "column": "depto",
+           "type": "column"
+          },
+          {
+           "column": "anio",
+           "type": "column"
+          }
+         ],
+         "selects": [
+          {
+           "column": "depto",
+           "type": "column"
+          },
+          {
+           "alias": "column_ffd8cc2185",
+           "args": [
+            {
+             "column": "total_accidentes",
+             "type": "column"
+            }
+           ],
+           "function": "SUM",
+           "type": "function"
+          },
+          {
+           "column": "anio",
+           "type": "column"
+          }
+         ]
+        }
+       },
+       "submitTime": 0,
+       "subtype": "tableResultSubCmd.visualization",
+       "tableResultIndex": 0,
+       "tableResultSettingsMap": {},
+       "useConsistentColors": false,
+       "version": "CommandV1",
+       "width": "auto",
+       "workflows": null,
+       "xColumns": null,
+       "yColumns": null
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "acc_por_anio_dep = (hechos_silver\n",
+    "                    .groupBy(\"anio\", \"depto\")\n",
+    "                    .agg(F.count(\"*\").alias(\"total_accidentes\"))\n",
+    "                    )\n",
+    "\n",
+    "display(acc_por_anio_dep)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "01ab6450-a7ee-4094-8863-be30e1b1b996",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "6. ¿Qué día de la semana registra más accidentes en 2024?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "622dc78f-b890-4e25-ac6b-202d7cd471cf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Databricks visualization. Run in Databricks to view."
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1.subcommand+json": {
+       "baseErrorDetails": null,
+       "bindings": {},
+       "collapsed": false,
+       "command": "%python\n__backend_agg_display_orig = display\n__backend_agg_dfs = []\ndef __backend_agg_display_new(df):\n    __backend_agg_df_modules = [\"pandas.core.frame\", \"databricks.koalas.frame\", \"pyspark.sql.dataframe\", \"pyspark.pandas.frame\", \"pyspark.sql.connect.dataframe\"]\n    if (type(df).__module__ in __backend_agg_df_modules and type(df).__name__ == 'DataFrame') or isinstance(df, list):\n        __backend_agg_dfs.append(df)\n\ndisplay = __backend_agg_display_new\n\ndef __backend_agg_user_code_fn():\n    import base64\n    exec(base64.standard_b64decode(\"IyBTZSBjYW1iaWEgMjAyNCBwb3IgMjAyMyBkZWJpZG8gYSBxdWUgbm8gc2UgdGllbmVuIGxvcyBkYXRvcyBkZWwgMjAyNApoZWNob3Nfc3RkLnNlbGVjdCgiZGlhX3NlbSIsICJhbmlvIikud2hlcmUoRi5jb2woImFuaW8iKSA9PSAiMjAyMyIpLmdyb3VwQnkoImRpYV9zZW0iKS5jb3VudCgpLmRpc3BsYXkoKQ==\").decode())\n\ntry:\n    # run user code\n    __backend_agg_user_code_fn()\n\n    #reset display function\n    display = __backend_agg_display_orig\n\n    if len(__backend_agg_dfs) > 0:\n        # create a temp view\n        if type(__backend_agg_dfs[0]).__module__ == \"databricks.koalas.frame\":\n            # koalas dataframe\n            __backend_agg_dfs[0].to_spark().createOrReplaceTempView(\"DatabricksView1809abc\")\n        elif type(__backend_agg_dfs[0]).__module__ == \"pandas.core.frame\" or isinstance(__backend_agg_dfs[0], list):\n            # pandas dataframe\n            spark.createDataFrame(__backend_agg_dfs[0]).createOrReplaceTempView(\"DatabricksView1809abc\")\n        else:\n            __backend_agg_dfs[0].createOrReplaceTempView(\"DatabricksView1809abc\")\n        #run backend agg\n        display(spark.sql(\"\"\"WITH q AS (select * from DatabricksView1809abc) SELECT `dia_sem`,SUM(`count`) `column_b381ce06103` FROM q GROUP BY `dia_sem`\"\"\"))\n    else:\n        displayHTML(\"dataframe no longer exists. If you're using dataframe.display(), use display(dataframe) instead.\")\n\n\nfinally:\n    spark.sql(\"drop view if exists DatabricksView1809abc\")\n    display = __backend_agg_display_orig\n    del __backend_agg_display_new\n    del __backend_agg_display_orig\n    del __backend_agg_dfs\n    del __backend_agg_user_code_fn\n\n",
+       "commandTitle": "Chart",
+       "commandType": "auto",
+       "commandVersion": 0,
+       "commentThread": [],
+       "commentsVisible": false,
+       "contentSha256Hex": null,
+       "customPlotOptions": {
+        "redashChart": [
+         {
+          "key": "type",
+          "value": "CHART"
+         },
+         {
+          "key": "options",
+          "value": {
+           "alignYAxesAtZero": true,
+           "coefficient": 1,
+           "columnConfigurationMap": {
+            "x": {
+             "column": "dia_sem",
+             "id": "column_b381ce06102"
+            },
+            "y": [
+             {
+              "column": "count",
+              "id": "column_b381ce06103",
+              "transform": "SUM"
+             }
+            ]
+           },
+           "dateTimeFormat": "DD/MM/YYYY HH:mm",
+           "direction": {
+            "type": "counterclockwise"
+           },
+           "error_y": {
+            "type": "data",
+            "visible": true
+           },
+           "globalSeriesType": "column",
+           "isAggregationOn": true,
+           "legend": {
+            "traceorder": "normal"
+           },
+           "missingValuesAsZero": true,
+           "numberFormat": "0,0.[00000]",
+           "percentFormat": "0[.]00%",
+           "series": {
+            "error_y": {
+             "type": "data",
+             "visible": true
+            },
+            "stacking": null
+           },
+           "seriesOptions": {
+            "column_b381ce06103": {
+             "name": "count",
              "yAxis": 0
             }
            },
@@ -1021,12 +1263,12 @@
        "latestUserId": null,
        "listResultMetadata": null,
        "metadata": {},
-       "nuid": "59f45bf6-84f8-4074-9d33-0e3352389a51",
+       "nuid": "e3f206e0-4755-411c-9026-13e5211451da",
        "origId": 0,
        "parentHierarchy": [],
        "pivotAggregation": null,
        "pivotColumns": null,
-       "position": 23.5,
+       "position": 25.0,
        "resultDbfsErrorMessage": null,
        "resultDbfsStatus": "INLINED_IN_TREE",
        "results": null,
@@ -1038,20 +1280,20 @@
         "queryPlan": {
          "groups": [
           {
-           "column": "depto",
+           "column": "dia_sem",
            "type": "column"
           }
          ],
          "selects": [
           {
-           "column": "depto",
+           "column": "dia_sem",
            "type": "column"
           },
           {
-           "alias": "column_ffd8cc2185",
+           "alias": "column_b381ce06103",
            "args": [
             {
-             "column": "total_accidentes",
+             "column": "count",
              "type": "column"
             }
            ],
@@ -1077,31 +1319,8 @@
     }
    ],
    "source": [
-    "acc_por_anio_dep = (hechos_std\n",
-    "                    .groupBy(\"anio\", \"depto\")\n",
-    "                    .agg(F.sum(\"anio\").alias(\"total_accidentes\"))\n",
-    "                    )\n",
-    "\n",
-    "hechos_silver.select('depto').show()\n",
-    "hechos_silver.select('depto').distinct().show()\n",
-    "\n",
-    "display(acc_por_anio_dep)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "01ab6450-a7ee-4094-8863-be30e1b1b996",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "6. ¿Qué día de la semana registra más accidentes en 2024?"
+    "# Se cambia 2024 por 2023 debido a que no se tienen los datos del 2024\n",
+    "hechos_std.select(\"dia_sem\", \"anio\").where(F.col(\"anio\") == \"2023\").groupBy(\"dia_sem\").count().display()"
    ]
   }
  ],
